# fashion_scoring_agent

./: .env.example  CodeBuddy_task_aug-13-2025_7-54-23-pm.md  CodeBuddy_task_aug-13-2025_7-56-56-pm.md  README.md  docker-compose.yml  memory_algorithms.md  memory_data_structures.md  pyproject.toml  requirements.txt  start.sh  technical_architecture.md
app/: main.py
app/api/: api.py
app/api/endpoints/: analysis.py  intent.py  memory.py  unified.py
app/core/: __init__.py  config.py  qwen_client.py
app/db/: database.py  init_db.py
app/models/: memory_models.py  schemas.py
app/services/: __init__.py  analysis_service.py  image_service.py  intent_service.py  memory_service.py  recommendation_service.py  scoring_agent.py
docs/: API使用指南.md  memory_data_structures.md  快速入门指南.md  意图识别模块.md  智能穿搭分析Agent.md  项目文档.md
